# graphizy

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  test_fixes.py  test_specific.sh  update_version.py
.github/workflows/: ci.yml  main.yml
docs/: conf.py  requirements.txt  use_sphinx.md
docs/examples/: .gitkeep  GALLERY_HEADER.rst  README.md
docs/source/: conf.py  graphizy.rst  index.rst  modules.rst
examples/: 0_interactive_demo.py  1.basic_usage.py  1_basic_usage.py  2.memory_graph.py  2_graph_metrics.py  3_advanced_memory.py  4_configuration_and_weights.py  4_integrated_brownian.py  4_interactive_demo.py  4_video_analysis.py  4_weight_computation.py  5.add_new_graph_type.py  5_add_new_graph_type.py  6_stream_example.py  7_benchmark_comparison.py  7_custom_weight_functions.py  README.md  __init__.py  add_new_graph_type.py  benchmark_2.py  benchmark_comparison.py  benchmark_disconnected.py  benchmark_proximity.py  benchmark_results.json  plot_benchmarks.py  run_examples.py
paper/: paper.bib  paper.md
tests/: __init__.py  conftest.py  debug_coordinates.py  debug_coordinates_addvanced.py  debug_diagnostic.py  debug_swap.py  quick_test.py  test_advanced.py  test_algorithms_errors.py  test_analysis.py  test_basic.py  test_cli.py  test_config.py  test_coordinates.py  test_core_algorithms.py  test_data_interface.py  test_diagnostic.py  test_distance_computation.py  test_drawing.py  test_drawing_architecture.py  test_endtoend.py  test_error_handling.py  test_fix.py  test_fixes.py  test_gabriel.py  test_integrated.py  test_main_graphing.py  test_main_refactoring.py  test_memory.py  test_memory_fix.py  test_netx.py  test_plugin_examples.py  test_plugin_system.py  test_plugins.py  test_refactoring.py  test_smoke_tutorial.py  test_streaming.py  test_weight.py
tutorials/: animal_movement_analysis.py  particle_system_dynamics.py  research_tutorials_readme.md  urban_spatial_network.py
(+40 files in other folders)
