[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphizy"
version = "0.1.5"
description = "A graph maker for computational geometry and network visualization"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-2.0-or-later" }
authors = [
    {name = "Charles Fosseprez", email = "charles.fosseprez.pro@gmail.com"},
]
keywords = ["graph", "delaunay", "triangulation", "visualization", "computational-geometry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "python-igraph>=0.9.0",
    "scipy>=1.7.0",
]

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
pytest-cov = "^2.0"
black = "^22.0"
flake8 = "^4.0"
mypy = "^0.910"
sphinx = ">=4.0,<10.0"
sphinx_gallery = ">=0.19.0"
furo = "<2024"

[project.urls]
Homepage = "https://github.com/lesptizami/graphizy"
Repository = "https://github.com/lesptizami/graphizy"
Issues = "https://github.com/lesptizami/graphizy/issues"

[project.scripts]
graphizy = "graphizy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=graphizy --cov-report=html --cov-report=term-missing"
